# docs/swagger.json
@@ -77,13 +77,15 @@
                     "400": {
                         "description": "Invalid query parameters",
                         "schema": {
-                            "$ref": "#/definitions/echo.Map"
+                            "type": "object",
+                            "additionalProperties": true
                         }
                     },
                     "500": {
                         "description": "Internal server error",
                         "schema": {
-                            "$ref": "#/definitions/echo.Map"
+                            "type": "object",
+                            "additionalProperties": true
                         }
                     }
                 }
@@ -154,6 +156,55 @@
                 }
             }
         },
+        "/rankings": {
+            "get": {
+                "description": "Retrieve the rankings of fighters for a specific weight class",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Rankings"
+                ],
+                "summary": "Get rankings by weight class",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Weight class of fighters (e.g., Lightweight, Welterweight)",
+                        "name": "weightclass",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "List of ranked fighters",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/handlers.Fighter"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request - Missing weight class parameter",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error - Database query issue",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
         "/register": {
             "post": {
                 "description": "Create a new user account",
@@ -183,19 +234,26 @@
         }
     },
     "definitions": {
-        "echo.Map": {
-            "type": "object",
-            "additionalProperties": true
-        },
-        "gorm.DeletedAt": {
+        "handlers.Fighter": {
             "type": "object",
             "properties": {
-                "time": {
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
                     "type": "string"
                 },
-                "valid": {
-                    "description": "Valid is true if Time is not NULL",
-                    "type": "boolean"
+                "nickname": {
+                    "type": "string"
+                },
+                "rank": {
+                    "type": "integer"
+                },
+                "record": {
+                    "type": "string"
+                },
+                "weight_class": {
+                    "type": "string"
                 }
             }
         },
@@ -204,9 +262,6 @@
             "properties": {
                 "created_at": {
                     "type": "string"
-                },
-                "deleted_at": {
-                    "$ref": "#/definitions/gorm.DeletedAt"
                 },
                 "draws": {
                     "type": "integer"
@@ -230,12 +285,6 @@
                     "type": "string"
                 },
                 "nickname": {
-                    "type": "string"
-                },
-                "reach": {
-                    "type": "string"
-                },
-                "stance": {
                     "type": "string"
                 },
                 "updated_at": {
